tests/NormalTests/paczka1/small_fuzzy/59106759.err
Error in line 3: opU S660 87,2
Error in line 7: S103 S103 83,9
Error in line 1: qSHaMEo1h A43 67,9
Error in line 5: opU S103 31,3
